# taskflow-backend

./: .env.example  .gitignore  Dockerfile  README.MD  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
alembic/: env.py
alembic/versions/: 2026-06-18_initial_commit.py  60c53a61a707_add_task_indexes.py  c471a73dad42_init_tables.py
app/: config.py  dependencies.py  main.py
app/core/: exceptions.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  tag.py  task.py  user.py
app/routers/: auth.py  tags.py  tasks.py  users.py
app/schemas/: auth.py  tag.py  task.py  user.py
app/services/: auth_service.py  tag_service.py  task_service.py
tests/: conftest.py  test_auth.py  test_tags.py  test_tasks.py
